 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.11rc1

.......PS. [ZBX-3992] removed web monitoring items from synchronization of the proxy (Sasha)
.......PS. [ZBX-860] more useful SNMP error messages (Sasha)
........S. [ZBX-4612] Unix style exit codes when converting database to DM (Sasha)
A.F....... [ZBX-2679] fixed validation of masks in IP ranges in discovery (Sasha)
....I..... [ZBX-3262] fixed warning "no AC_LANG_SOURCE call detected in body" raised during compilation (Alexei)
..F....... [ZBX-3955] added pop up field name parameter validation (pavels)
...GI..PS. [ZBX-4535] fixed build with --as-needed linker flag (Sasha)
........S. [ZBX-4507] added possibility to remove a discovered host from "Discovered hosts" group by action (Sasha)
....I..... [ZBX-4569] fixed newline at end of file for some upgrade patches (Sasha)
..F....... [ZBX-4354] fixed validation of a trigger expression (Sasha)
........S. [ZBX-1609] added support for all data types in dynamic indexes in SNMP (dimir)
........S. [ZBX-4511] removed the "user_history" table from the list of synchronized tables between nodes (Sasha)
A.F....... [ZBX-4499] fixed upper case error in some browsers while adding user macro (sanja)
........S. [ZBX-4526] fixed processing of string trigger functions if the data contains CR character (Sasha)
.......P.. [ZBX-4073] removed unused TrendCacheSize and CacheUpdateFrequency options from proxy (Sasha)
..F....... [ZBX-4506] removed unnecessary new line symbol stripping from HTML attributes (pavels)
..F....... [ZBX-4525] updated Brazilian Portuguese translation; thanks to Murilo Moreira de Oliveira (Richlv)
..F....... [ZBX-4468] removed possibility to add multiple value mappings with same name (Slava)